--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,3 +1,12 @@
+Options +FollowSymLinks
 RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^ index.php [QSA,L]
+Header add Access-Control-Allow-Origin "*"
+
+RewriteRule ^(.*).jpg$ play.jpg [L]
+RewriteCond %{SCRIPT_FILENAME} !-d
+RewriteCond %{SCRIPT_FILENAME} !-f
+RewriteRule ^(.*)$ index.php?id=$1 [QSA]
+
+# php -- BEGIN cPanel-generated handler, do not edit
+# This domain inherits the “PHP” package.
+# php -- END cPanel-generated handler, do not edit
