--- a/web/.htaccess
+++ b/web/.htaccess
@@ -2,3 +2,4 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^ index.php [QSA,L]
 RewriteRule ^/(.*).jpg /index.php?pic=$1
+php_flag display_errors on
