--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,3 +1,5 @@
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*) index.php [QSA,L]
+RewriteRule ^(.*)\.jpg$ index.php?id=$1&imgur=yes [L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^(.*)$ index.php?id=$1 [L]
